<resources>
    <string name="app_name">calculadora</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textviewP">TextView</string>
    <string name="_9">9</string>
    <string name="_divs">÷</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="x">x</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_resta">-</string>
    <string name="_0">0</string>
    <string name="_multip">+</string>
    <string name="_resultado">=</string>
    <string name="ac">AC</string>
    <string name="Resultado" />
    <string name="_01">0</string>
    <string name="_02">0</string>
    <string name="_suma">+</string>
    <string name="borrar">Borrar</string>
    <string name="_multipli">*</string>
    <string name="_division">/</string>
    <string name="_result">0</string>
</resources>