<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_producto"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="#000000"
        android:text="@string/_result"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textSize="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton_borrar"
                android:layout_width="185dp"
                android:layout_height="85dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#000000"
                android:onClick="BorrarNumero"
                android:text="@string/borrar"
                android:textSize="17dp" />

            <Button
                android:id="@+id/boton_limpiar"
                android:layout_width="185dp"
                android:layout_height="85dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="#000000"
                android:onClick="LimpiarResultado"
                android:text="@string/ac"
                android:textSize="17dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton_7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:onClick="EscribirSiete"
                android:text="@string/_7"
                android:textSize="30dp" />

            <Button
                android:id="@+id/boton_8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:onClick="EscribirOcho"
                android:text="@string/_8"
                android:textSize="30dp" />

            <Button
                android:id="@+id/boton_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:onClick="EscribirNueve"
                android:text="@string/_9"
                android:textSize="30dp" />

            <Button
                android:id="@+id/boton_divs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="#000000"
                android:onClick="Division"
                android:text="@string/_division"
                android:textSize="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:onClick="EscribirCuatro"
                android:text="@string/_4"
                android:textSize="30dp" />

            <Button
                android:id="@+id/boton_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:onClick="EscribirCinco"
                android:text="@string/_5"
                android:textSize="30dp" />

            <Button
                android:id="@+id/boton_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:onClick="EscribirSeis"
                android:text="@string/_6"
                android:textSize="30dp" />

            <Button
                android:id="@+id/boton_multip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="#000000"
                android:onClick="Multipli"
                android:text="@string/_multipli"
                android:textSize="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:onClick="EscribirUno"
                android:text="@string/_1"
                android:textSize="30dp" />

            <Button
                android:id="@+id/boton_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:onClick="EscribirDos"
                android:text="@string/_2"
                android:textSize="30dp" />

            <Button
                android:id="@+id/boton_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:onClick="EscribirTres"
                android:text="@string/_3"
                android:textSize="30dp" />

            <Button
                android:id="@+id/boton_resta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="#000000"
                android:onClick="Resta"
                android:text="@string/_resta"
                android:textSize="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="115dp"
                android:layout_marginRight="128dp"
                android:layout_weight="1"
                android:backgroundTint="#FF9800"
                android:onClick="EscribirCero"
                android:text="@string/_0"
                android:textSize="30dp" />

            <Button
                android:id="@+id/boton_suma"
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="#000000"
                android:onClick="Suma"
                android:text="@string/_suma"
                android:textSize="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton_igual"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="317dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="#000000"
                android:onClick="MostrarResultado"
                android:text="@string/_resultado"
                android:textSize="30dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>